feat: Add changedetection-io HelmRelease and resources

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - speedtest-tracker
   - linkwarden
   # - linkstack
+  - changedetection-io
   - mariadb-operator
   - wordpress-dev-portfolio
   - freshrss
