fix: Correct typo in HelmRepository name

--- a/clusters/home/apps/changedetection-io/release.yaml
+++ b/clusters/home/apps/changedetection-io/release.yaml
@@ -20,7 +20,7 @@ spec:
       version: "1.x.x"
       sourceRef:
         kind: HelmRepository
-        name: zeekker6
+        name: zekker6
         namespace: flux-system
       interval: 1m
   values:
