--- a/clusters/home/apps/changedetection-io/release.yaml
+++ b/clusters/home/apps/changedetection-io/release.yaml
@@ -35,9 +35,8 @@ spec:
     ingress:
       main:
         enabled: true
+        ingressClassName: nginx
         annotations:
-          kubernetes.io/ingress.class: nginx
-          nginx.ingress.kubernetes.io/proxy-body-size: 999m
           gethomepage.dev/enabled: "true"
           gethomepage.dev/description: Web Site Change Detection, Restock monitoring and notifications.
           gethomepage.dev/group: Apps/Services
@@ -47,4 +46,5 @@ spec:
         hosts:
           - host: change-detection.pacholoamit.com
             paths:
-              - /
+              - path: /
+                
