--- a/clusters/home/apps/changedetection-io/release.yaml
+++ b/clusters/home/apps/changedetection-io/release.yaml
@@ -24,7 +24,13 @@ spec:
         namespace: flux-system
       interval: 1m
   values:
-
+  image:
+    # -- image repository
+    repository: ghcr.io/dgtlmoon/changedetection.io
+    # -- image tag
+    tag: "0.45.24"
+    # -- image pull policy
+    pullPolicy: IfNotPresent
     persistence:
       data:
         enabled: true
