chore: Update kustomization.yaml configurations

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - speedtest-tracker
   - linkwarden
   # - linkstack
-  - changedetection-io
+  # - changedetection-io
   - mariadb-operator
   - wordpress-dev-portfolio
   - freshrss
