--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -1,19 +1,19 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - postgresql # WARNING: Removing this will also remove the volume
+  # - postgresql # WARNING: Removing this will also remove the volume
   - homepage
-  - n8n
-  - vaultwarden
-  - cloudflare
-  - weaveworks-dashboard
-  - speedtest-tracker
-  - linkwarden
+  # - n8n
+  # - vaultwarden
+  # - cloudflare
+  # - weaveworks-dashboard
+  # - speedtest-tracker
+  # - linkwarden
   # - linkstack
   # - changedetection-io
-  - mariadb-operator
-  - wordpress-dev-portfolio
-  - freshrss
-  - gatus
-  - pachtop
-  - nextjs-developer-portfolio
+  # - mariadb-operator
+  # - wordpress-dev-portfolio
+  # - freshrss
+  # - gatus
+  # - pachtop
+  # - nextjs-developer-portfolio
