fix: Enable cloudflare in kustomization config

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - homepage
   # - n8n
   # - vaultwarden
-  # - cloudflare
+  - cloudflare
   # - weaveworks-dashboard
   # - speedtest-tracker
   # - linkwarden
