style: Remove commented out weaveworks-dashboard

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   # - n8n
   # - vaultwarden
   - cloudflare
-  # - weaveworks-dashboard
+  - weaveworks-dashboard
   # - speedtest-tracker
   # - linkwarden
   # - linkstack
