refactor: Update Longhorn release.yaml configurations

--- a/clusters/home/core/longhorn/release.yaml
+++ b/clusters/home/core/longhorn/release.yaml
@@ -24,3 +24,4 @@ spec:
       detachManuallyAttachedVolumesWhenCordoned: true
       guaranteedInstanceManagerCPU: 35
       v2DataEngine: true
+      v1DataEngine: false
