--- a/clusters/home/core/longhorn/release.yaml
+++ b/clusters/home/core/longhorn/release.yaml
@@ -26,3 +26,6 @@ spec:
       v2DataEngine: true
       v1DataEngine: false
       orphanAutoDeletion: true
+      rwxVolumeFastFailover: true
+      autoCleanupSnapshotWhenDeleteBackup: true
+      restoreVolumeRecurringJobs: true
