--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   # - postgresql # WARNING: Removing this will also remove the volume
   - homepage
   - n8n
-  # - vaultwarden
+  - vaultwarden
   - cloudflare
   - weaveworks-dashboard
   # - speedtest-tracker
