--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -7,8 +7,8 @@ resources:
   - vaultwarden
   - cloudflare
   - weaveworks-dashboard
-  # - speedtest-tracker
-  # - linkwarden
+  - speedtest-tracker
+  - linkwarden
   # - linkstack
   # - changedetection-io
   # - mariadb-operator
