style: Remove commented out applications from kustomization

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -14,6 +14,6 @@ resources:
   # - mariadb-operator
   # - wordpress-dev-portfolio
   # - freshrss
-  # - gatus
-  # - pachtop
+  - gatus
+  - pachtop
   # - nextjs-developer-portfolio
