style: Comment out linkwarden in resources list

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - cloudflare
   - weaveworks-dashboard
   - speedtest-tracker
-  - linkwarden
+  # - linkwarden
   # - linkstack
   # - changedetection-io
   # - mariadb-operator
