--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -13,7 +13,7 @@ resources:
   # - changedetection-io
   # - mariadb-operator
   # - wordpress-dev-portfolio
-  # - freshrss
+  - freshrss
   - gatus
   - pachtop
   # - nextjs-developer-portfolio
