--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - vaultwarden
   - cloudflare
   - weaveworks-dashboard
- # - speedtest-tracker
+  - speedtest-tracker
   - linkwarden
   # - linkstack
   # - changedetection-io
