chore: Update kustomization.yaml configurations

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - linkwarden
   # - linkstack
   # - changedetection-io
-  - mariadb-operator
+  # - mariadb-operator
   - wordpress-dev-portfolio
 #  - freshrss
   - gatus
