style: Update kustomization.yaml file with comments for clarity

--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -3,9 +3,9 @@ kind: Kustomization
 resources:
   - ingress-nginx
   - longhorn
-  - kured 
+  # - kured 
   # - rancher 
-  - reloader
+  # - reloader
   # - node-problem-detector 
   # - system-upgrade  # Enable for upgrades
   
