--- a/clusters/home/apps/vaultwarden/release.yaml
+++ b/clusters/home/apps/vaultwarden/release.yaml
@@ -18,6 +18,8 @@ spec:
         namespace: flux-system
       interval: 1m
   values:
+    accessModes:
+      - ReadWriteMany
     resourceType: Deployment
     image:
       repository: vaultwarden/server
