--- a/clusters/home/apps/vaultwarden/release.yaml
+++ b/clusters/home/apps/vaultwarden/release.yaml
@@ -18,8 +18,6 @@ spec:
         namespace: flux-system
       interval: 1m
   values:
-    accessModes:
-      - ReadWriteMany
     resourceType: Deployment
     image:
       repository: vaultwarden/server
@@ -33,5 +31,6 @@ spec:
       size: 5Gi
       class: longhorn
       keepPvc: true
+      accessModes: "ReadWriteMany"
     domain: https://vaultwarden.pacholoamit.com
     
