style: Update kustomization.yaml and configs.yaml formatting

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -11,8 +11,8 @@ resources:
   - linkwarden
   # - linkstack
   # - changedetection-io
-  - mariadb-operator
-  - wordpress-dev-portfolio
+  # - mariadb-operator
+  # - wordpress-dev-portfolio
 #  - freshrss
   - gatus
   - pachtop
