fix: Update service name and port number in ingress.yaml

--- a/clusters/home/apps/kavita/ingress.yaml
+++ b/clusters/home/apps/kavita/ingress.yaml
@@ -36,6 +36,6 @@ spec:
         path: "/"
         backend:
           service:
-            name: linkwarden
+            name: kavita
             port: 
-              number: 3000
+              number: 5000
