fix: Update volume mount path in deployment.yaml

--- a/clusters/home/apps/kavita/deployment.yaml
+++ b/clusters/home/apps/kavita/deployment.yaml
@@ -20,7 +20,7 @@ spec:
           ports:
             - containerPort: 5000
           volumeMounts:
-            - mountPath: /manga
+            - mountPath: /books
               name: kavita
             - mountPath: /kavita/config
               name: kavita-config
