docs: Update .sopsrc with platform-specific ageKeyFile paths

--- a/.sopsrc
+++ b/.sopsrc
@@ -1,1 +1,5 @@
-ageKeyFile: /home/ubuntu/code-workspace/devops/homelab-infra/age.agekey
+# For windows
+# ageKeyFile: /home/ubuntu/code-workspace/devops/homelab-infra/age.agekey
+
+# For MacOs
+ageKeyFile: /Users/pacholoamit/Developer/code-workspace/devops/homelab-infra/age.agekey
