--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   # - mariadb-operator
   # - wordpress-dev-portfolio
 #  - freshrss
+  - mariadb
   - gatus
   - pachtop
   - nextjs-developer-portfolio
