--- a/clusters/home/apps/mariadb/release.yaml
+++ b/clusters/home/apps/mariadb/release.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: n8n
+  name: mariadb
   namespace: default
 spec:
   interval: 5m
