fix: Fix freshrss indentation in kustomization.yaml

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -9,7 +9,7 @@ resources:
   # - speedtest-tracker
   - linkwarden
   - wordpress-dev-portfolio
-#  - freshrss
+  - freshrss
   - mariadb
   - gatus
   - pachtop
