style: fix indentation in kustomization.yaml

--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - ingress-nginx
   - longhorn
   - cloudflare
-  # - rancher 
+  - rancher 
   # - system-upgrade  # Enable for upgrades
   
   
