--- a/clusters/home/core/rancher/release.yaml
+++ b/clusters/home/core/rancher/release.yaml
@@ -6,10 +6,13 @@ metadata:
 spec:
   interval: 5m
   install:
-      createNamespace: true
-      crds: CreateReplace
-      remediation:
-          retries: 3
+    remediation:
+      retries: 3
+    timeout: 30m
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
   chart:
     spec:
       chart: rancher
