feat: Add dependency on mariadb in release.yaml

--- a/clusters/home/apps/wordpress-dev-portfolio/release.yaml
+++ b/clusters/home/apps/wordpress-dev-portfolio/release.yaml
@@ -11,12 +11,14 @@ spec:
       remediation:
           retries: 3
       replace: true
-      
   upgrade:
       crds: CreateReplace
       remediation:
           retries: 3
       cleanupOnFail: true
+  dependsOn:
+    - name: mariadb
+      namespace: default
   chart:
     spec:
       chart: wordpress
