feat: Add letsencrypt ingress configuration

--- a/clusters/home/core/rancher/release.yaml
+++ b/clusters/home/core/rancher/release.yaml
@@ -24,6 +24,9 @@ spec:
       interval: 30m
   values:
     hostname: rancher.pacholoamit.com
+    letsencrypt:
+      ingress:
+        class: nginx
     ingress:
       ingressClassName: nginx
       replicas: 1
