--- a/clusters/home/core/rancher/release.yaml
+++ b/clusters/home/core/rancher/release.yaml
@@ -22,6 +22,9 @@ spec:
         name: rancher
         namespace: flux-system
       interval: 30m
+  dependsOn:
+    - name: cert-manager
+      namespace: cert-manager
   values:
     hostname: rancher.pacholoamit.com
     letsencrypt:
@@ -37,3 +40,26 @@ spec:
         gethomepage.dev/icon: rancher
         gethomepage.dev/name: Rancher
         gethomepage.dev/weight: "1"
+        
+---
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
+metadata:
+  name: cert-manager
+  namespace: cert-manager
+spec:
+  interval: 5m
+  chart:
+    spec:
+      chart: cert-manager
+      version: "1.x.x" # Change to the latest stable version if needed
+      sourceRef:
+        kind: HelmRepository
+        name: jetstack
+        namespace: flux-system
+  values:
+    installCRDs: true
+  install:
+    createNamespace: true
+  upgrade:
+    cleanupOnFail: true
