--- a/clusters/home/helm/jetstack/kustomization.yaml
+++ b/clusters/home/helm/jetstack/kustomization.yaml
@@ -1,8 +1,4 @@
-apiVersion: source.toolkit.fluxcd.io/v1
-kind: HelmRepository
-metadata:
-  name: jetstack
-  namespace: flux-system
-spec:
-  interval: 30m
-  url: https://charts.jetstack.io
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
+  - repository.yaml
