--- a/clusters/home/core/rancher/namespace.yaml
+++ b/clusters/home/core/rancher/namespace.yaml
@@ -2,3 +2,9 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: cattle-system
+---
+
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: cert-manager
