--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - n8n
   - vaultwarden
   - weaveworks-dashboard
-  # - speedtest-tracker
+  - speedtest-tracker
   - linkwarden
   - wordpress-dev-portfolio
   - freshrss
