feat: Update app names and add new app Maybe Finance

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -13,5 +13,6 @@ resources:
   - mariadb
   - gatus
   - pachtop
-  - nextjs-developer-portfolio
+  # - nextjs-developer-portfolio
   - kavita
+  - maybe-finance
