--- a/clusters/home/apps/maybe-finance/ingress.yaml
+++ b/clusters/home/apps/maybe-finance/ingress.yaml
@@ -1,35 +1,34 @@
 apiVersion: v1
-kind: Service
+kind: LoadBalancer
 metadata:
-  name: kavita
+  name: maybe-finance
 spec:
   selector:
-    app: kavita
+    app: maybe-finance
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 5000
-
+      port: 3000
+      targetPort: 3000
 
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: kavita
+  name: maybe-finance
   labels:
-    name: kavita
+    name: maybe-finance
   annotations:
     kubernetes.io/ingress.class: nginx
     gethomepage.dev/enabled: "true"
-    gethomepage.dev/description: Self-hosted ebook reader
+    gethomepage.dev/description: Personal finance tracker
     gethomepage.dev/group: Apps/Services
-    gethomepage.dev/icon: kavita
-    gethomepage.dev/name: Kavita
-    gethomepage.dev/pod-selector: app=kavita
+    gethomepage.dev/icon: maybe-finance
+    gethomepage.dev/name: Maybe Finance
+    gethomepage.dev/pod-selector: app=maybe-finance
     gethomepage.dev/weight: "1"
 spec:
   rules:
-  - host: kavita.pacholoamit.com
+  - host: finance.pacholoamit.com
     http:
       paths:
       - pathType: Prefix
@@ -38,4 +37,4 @@ spec:
           service:
             name: kavita
             port: 
-              number: 5000
+              number: 3000
