fix: Update service name in ingress.yaml

--- a/clusters/home/apps/maybe-finance/ingress.yaml
+++ b/clusters/home/apps/maybe-finance/ingress.yaml
@@ -35,6 +35,6 @@ spec:
         path: "/"
         backend:
           service:
-            name: kavita
+            name: maybe-finance
             port: 
               number: 3000
