--- a/clusters/home/apps/actual-budget/ingress.yaml
+++ b/clusters/home/apps/actual-budget/ingress.yaml
@@ -22,7 +22,7 @@ metadata:
     gethomepage.dev/enabled: "true"
     gethomepage.dev/description: Actual Budget Server
     gethomepage.dev/group: Apps/Services
-    gethomepage.dev/icon: actual-budget
+    gethomepage.dev/icon: https://avatars.githubusercontent.com/u/37879538?s=200&v=4
     gethomepage.dev/name: Actual Budget
     gethomepage.dev/pod-selector: app=actual-budget
     gethomepage.dev/weight: "1"
