fix: Update deployment to use the latest image tag

--- a/clusters/home/apps/actual-budget/deployment.yaml
+++ b/clusters/home/apps/actual-budget/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: actual-budget
-          image: ghcr.io/actualbudget/actual-server:latest-alpine
+          image: ghcr.io/actualbudget/actual-server:latest
           ports:
             - containerPort: 5006
           volumeMounts:
