--- a/clusters/home/apps/postgresql/pvc.yaml
+++ b/clusters/home/apps/postgresql/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   storageClassName: longhorn
   resources:
     requests:
@@ -18,7 +18,7 @@ spec:
 #   namespace: default
 # spec:
 #   accessModes:
-#     - ReadWriteMany
+#     - ReadWriteOnce
 #   storageClassName: longhorn
 #   resources:
 #     requests:
@@ -31,7 +31,7 @@ spec:
 #   namespace: default
 # spec:
 #   accessModes:
-#     - ReadWriteMany
+#     - ReadWriteOnce
 #   storageClassName: longhorn
 #   resources:
 #     requests:
