--- a/clusters/home/apps/vaultwarden/release.yaml
+++ b/clusters/home/apps/vaultwarden/release.yaml
@@ -31,6 +31,6 @@ spec:
       size: 5Gi
       class: longhorn
       keepPvc: true
-      accessMode: "ReadWriteMany"
+      accessMode: "ReadWriteOnce"
     domain: https://vaultwarden.pacholoamit.com
     
