--- a/clusters/home/archives/changedetection-io/release.yaml
+++ b/clusters/home/archives/changedetection-io/release.yaml
@@ -35,7 +35,7 @@ spec:
       data:
         enabled: true
         storageClass: longhorn
-        accessMode: ReadWriteMany
+        accessMode: ReadWriteOnce
         size: 1Gi
 
     ingress:
