--- a/clusters/home/archives/superset/release.yaml
+++ b/clusters/home/archives/superset/release.yaml
@@ -33,7 +33,7 @@ spec:
           enabled: true
           storageClass: longhorn 
           accessModes:
-            - ReadWriteMany
+            - ReadWriteOnce
           size: 5Gi
 
     # minimum values.yaml to enable clickhouse support for apache superset deployment
@@ -48,5 +48,5 @@ spec:
         enabled: true
         storageClass: longhorn 
         accessModes:
-          - ReadWriteMany
+          - ReadWriteOnce
 
