--- a/clusters/home/archives/wg-easy/pvc.yaml
+++ b/clusters/home/archives/wg-easy/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   storageClassName: longhorn
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 0.25Gi
