fix: Update accessModes to ReadWriteMany in pvc.yaml files

--- a/clusters/home/apps/gatus/release.yaml
+++ b/clusters/home/apps/gatus/release.yaml
@@ -47,7 +47,7 @@ spec:
     persistence:
       enabled: true
       size: 5Gi
-      accessMode: ReadWriteOnce
+      accessMode: ReadWriteMany
       storageClass: local-path
     extraVolumeMounts:
       - name: secrets
