--- a/clusters/home/apps/mariadb/release.yaml
+++ b/clusters/home/apps/mariadb/release.yaml
@@ -25,5 +25,5 @@ spec:
         enabled: true
         storageClass: longhorn
         accessModes:
-          - ReadWriteOnce
+          - ReadWriteMany
         size: 8Gi
