--- a/clusters/home/apps/n8n/pv.yaml
+++ b/clusters/home/apps/n8n/pv.yaml
@@ -7,7 +7,7 @@ spec:
     storage: 2Gi
   volumeMode: Filesystem
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   persistentVolumeReclaimPolicy: Delete
   storageClassName: longhorn
   csi:
