--- a/clusters/home/apps/wordpress-dev-portfolio/release.yaml
+++ b/clusters/home/apps/wordpress-dev-portfolio/release.yaml
@@ -65,7 +65,7 @@ spec:
       enabled: true
       storageClass: longhorn
       accessModes:
-        - ReadWriteOnce
+        - ReadWriteMany
       size: 5Gi
       existingClaim: wordpress
     mariadb:
