--- a/clusters/home/archives/mariadb-operator/configs.mariadb-operator/restore.yaml
+++ b/clusters/home/archives/mariadb-operator/configs.mariadb-operator/restore.yaml
@@ -12,7 +12,7 @@ spec:
       requests:
         storage: 3Gi
     accessModes:
-      - ReadWriteOnce
+      - ReadWriteMany
 
   bootstrapFrom:
     backupRef:
