--- a/clusters/home/archives/mariadb-operator/configs.mariadb-operator/backup.yaml
+++ b/clusters/home/archives/mariadb-operator/configs.mariadb-operator/backup.yaml
@@ -14,7 +14,7 @@ spec:
         requests:
           storage: 3Gi
       accessModes:
-        - ReadWriteOnce
+        - ReadWriteMany
       storageClassName: longhorn
   resources:
     requests:
