feat: Add PostgreSQL image tag 16.0

--- a/clusters/home/apps/postgresql/release.yaml
+++ b/clusters/home/apps/postgresql/release.yaml
@@ -24,6 +24,8 @@ spec:
         namespace: flux-system
       interval: 1m
   values:
+    image:
+      tag: 16.0
     global:
       storageClass: longhorn
     auth:
