style: Update kustomization.yaml file formatting

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -14,6 +14,6 @@ resources:
   - gatus
   - pachtop
   # - nextjs-developer-portfolio
-  - kavita
+  # - kavita
   # - maybe-finance
   # - actual-budget
