fix: Update mariadb storage access mode to ReadWriteOnce

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -10,7 +10,7 @@ resources:
   - linkwarden
   - wordpress-dev-portfolio
   - freshrss
-  # - mariadb
+  - mariadb
   - gatus
   - pachtop
   # - nextjs-developer-portfolio
