style: Update kustomization.yaml file format

--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - weaveworks-dashboard
   # - speedtest-tracker
   - linkwarden
-  - wordpress-dev-portfolio
+  # - wordpress-dev-portfolio
   - freshrss
   - mariadb
   - gatus
