--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -4,13 +4,13 @@ resources:
   - postgresql # WARNING: Removing this will also remove the volume
   - homepage
   - n8n
-  - vaultwarden # Migrated
+  - vaultwarden # Migrated to ReadWriteOnce
   - weaveworks-dashboard
   # - speedtest-tracker
   - linkwarden
-  - wordpress-dev-portfolio # Migrated
+  - wordpress-dev-portfolio # Migrated to ReadWriteOnce
   # - freshrss
-  - mariadb # Migrated
+  - mariadb # Migrated to ReadWriteOnce
   - gatus
   - pachtop
   # - nextjs-developer-portfolio
