feat: Add new webhook URL for n8n integration

--- a/clusters/home/apps/n8n/release.yaml
+++ b/clusters/home/apps/n8n/release.yaml
@@ -56,6 +56,7 @@ spec:
     
     extraEnv:
       WEBHOOK_TUNNEL_URL: https://n8n.pacholoamit.com
+      WEBHOOK_URL: https://n8n.pacholoamit.com
     ingress:
       enabled: true
       annotations:
