--- a/clusters/home/apps/n8n/kustomization.yaml
+++ b/clusters/home/apps/n8n/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - pvc.yaml # TODO: We created a pvc manually in longhorn, when rebuilding cluster, uncomment this
+  # - pvc.yaml # TODO: We created a pvc manually in longhorn, when rebuilding cluster, uncomment this6
   - release.yaml
 
