--- a/clusters/home/apps/kustomization.yaml
+++ b/clusters/home/apps/kustomization.yaml
@@ -1,17 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - postgresql # Migrated to ReadWriteOnce
+  - postgresql 
   - homepage
   - n8n
-  - vaultwarden # Migrated to ReadWriteOnce
-  # - linkwarden # ENABLE POSTGRES FIRST
-  # - wordpress-dev-portfolio # Migrated to ReadWriteOnce
-  # - freshrss
-  # - mariadb # Migrated to ReadWriteOnce
-  # - gatus
-  # - pachtop
-  # - nextjs-developer-portfolio
-  # - kavita
-  # - maybe-finance
-  # - actual-budget
+  - vaultwarden
