--- a/clusters/home/apps/hoarder/web-ingress.yaml
+++ b/clusters/home/apps/hoarder/web-ingress.yaml
@@ -24,6 +24,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: "web"
+            name: "hoarder-web"
             port:
               number: 3000
