docs: Add env variable for HOMEPAGE_ALLOWED_HOSTS

--- a/clusters/home/apps/homepage/release.yaml
+++ b/clusters/home/apps/homepage/release.yaml
@@ -39,6 +39,11 @@ spec:
     enableRbac: true
     config:
       useExistingConfigMap: homepage-configmap
+    env:
+      - name: HOMEPAGE_ALLOWED_HOSTS
+        # This value must be set
+        # ref: https://gethomepage.dev/installation/#homepage_allowed_hosts
+        value: "*"
 
     ingress:
       main:
