--- a/clusters/home/apps/hoarder/secrets.yaml
+++ b/clusters/home/apps/hoarder/secrets.yaml
@@ -6,6 +6,7 @@ stringData:
     NEXTAUTH_SECRET: ENC[AES256_GCM,data:g1/EzZ0OaA71yBL05U83dJKS6U1MIS2SHiui0W14gkOlPQV+hDOAK+0LS7ZHg7Ol,iv:rJmRm6R/WbM0F/qJRV86mvGZLGeCM+ToGL2EsYd2+NY=,tag:+/FmjtM71ORpBh2Fb5MteQ==,type:str]
     MEILI_MASTER_KEY: ENC[AES256_GCM,data:FXN3cPCXnNBaoi1+VK+GI0H4DzWslm2vWCN648JkcBo9IAR3xfeh8HJyNk8V4gT4,iv:VN3AKTWTPgkvWWsppQEDXpDYdVSRZUBohzpgJTPvPeA=,tag:a17wz+Q/LftfaFt1j64lgA==,type:str]
     NEXT_PUBLIC_SECRET: ENC[AES256_GCM,data:/n/JuCvpDk4mgSGk3sOTU8FTgr3yTUdSIpbhuQo6DGOtquuW13a9YDj3Up5LXcoO,iv:mwQyRC4oHhEY98Lyl6Uzhu75FsY1jC4naKKWL3UMO6s=,tag:UbZ8kfRYUZQPqFYBBlrEbQ==,type:str]
+    OPENAI_API_KEY: ENC[AES256_GCM,data:eTVBbQYKffM8q6c5yt1KkpoF+jqT4uZRi9NnzNNDU3ME0MsQfXPBb1fzuFXARzShoxLP5nrQdJ7Ia+30PrcY1Og+b9nKODMu9VCKGK1NMJda8hxDoPMVLl855AbgLd1UklOVvOSclNBuy80FPvw4uXDPD2X/1/lAcE2IADIHqLJ2wFb7,iv:x8kL5P0zeirpeP4AGZe9upQdWYAfhEKNOG7uMG8swNo=,tag:mMV28xs1e+IjAkibby0z1Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,8 +22,8 @@ sops:
             a0kvU3BaZVpDaXBXanhueUJYU2tRbFkKmGZUQ5CbOGeDoVG7lBJ/R/pFgYpX8ik3
             Hk1QAnptsqxIuNMRCcmJ4YldHm5Y7AfFm6K50xVofeR83DPmi79pFQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-03-30T16:47:51Z"
-    mac: ENC[AES256_GCM,data:dhQkSz3Kixe9rrrnSHGVtWqiB0XGxplu/NGXR788e6z9CpcrC+5vsnKFkBxwRCvuk4+KjG51wS/XWmJUo19Pj5pV4ARO7KHwNoeaxw7IzWx3jLTIEnyW/H/LVAOYPY99llbtWGpGKcJ8wskhQRVzNYKI8nlbI5I6zHIHGgf7oHY=,iv:IQgJtKZsYj2icr/8SPGAU2Lt51GO+Q5EQ6BGxvpamN8=,tag:p60b8L5AiLGBTe8WVIzKGw==,type:str]
+    lastmodified: "2025-03-30T17:08:30Z"
+    mac: ENC[AES256_GCM,data:iZh9BsK1vFngDd4eDzqvlgePCZAH6Abj0dxEcm8gj9SuSUJKIdmMrJPCUSrcyVFdbsHjetIRPL7hsf5McaHO30iNy5TNHcTMYmptq+1BD/MrRMzO5D8PyoznnWqu/vfP7je4StSF6baVfDJEbTBv3Wd9+FL4vDbWTi6MihoIi+w=,iv:UaYHGCpr9iXgllo27piyE7lqbyVJy10AH9AygP055a8=,tag:MRZuLDjb3oR5tpaxm8UMHw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.4
