--- a/clusters/home/apps/gatus/secret.yaml
+++ b/clusters/home/apps/gatus/secret.yaml
@@ -6,6 +6,7 @@ type: Opaque
 stringData:
     username: ENC[AES256_GCM,data:v2SXrgrUWYCs6EkqDmrruUQfbBYL0VNTDog=,iv:D8my6h5aOXLlIZz07yRh9NpUvg8ozpksGFQo4ZO005I=,tag:KL76937h+dp8oSQx71MSZQ==,type:str]
     password: ENC[AES256_GCM,data:7v6luMcLI5OFW1s3DG0FgMW3WdoJbzWA5DiS9X9Q0nCF9+btXw2J+LtglVjMmKtubRplDI2joivkzrmyLm/d2I8AimrG91imXA6b39cRex1wBZgJxrw5VLx0,iv:09m7QWuxxblR7315oOHQd7sXvCCm9G6grrXXGng+ruc=,tag:q+PNvzvfvM2j85PbFmrgbA==,type:str]
+    x-api-key: ENC[AES256_GCM,data:V6OA9hIqCZ2QYL0VKT+QjkCwMaOG,iv:UgeA2UdCfp40tPNcL+el80sDbj+WymYJ6SDhN9Y9E08=,tag:1NC8XrAgYTjeKLwu5KdSqg==,type:str]
 sops:
     age:
         - recipient: age19hfjt8tc0etz2swhums26jrsu8avaslpawkvrjcxj4tr0kwy6a2s4td64z
@@ -17,7 +18,7 @@ sops:
             YkZybEFkNnZEeVptUmlxTFhvaVIrbjAK8IQ0avWQsYNaqaDBlEnWb3J3DGWQWcgS
             PabeYThFralRBfmROB0DBz5qqlypibM/BpitnUMswA33XMCSVn/IdQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-09T21:10:05Z"
-    mac: ENC[AES256_GCM,data:aAGEtKek14pIuhtB+xVyOEngrla0WgPlFxfkZfpAfRmicqtjsrjkjSGh0H7ahU5ktnwuZ13sUnFxyq21mnngj7ADeCjaU71qZcVy0Ca7xHbvGve+/g2qbyLtfC6IksX6gIt07yHWSj/sYT/ohgQPjKsYl5Xbq5hVOYdOab5Q8NQ=,iv:2BG99WhPoBsvIA1INA3VtMSuno/ecUWDzsSNRyUzwsI=,tag:vqxpiEck8ATFCyAegFEUUw==,type:str]
+    lastmodified: "2025-06-09T21:19:01Z"
+    mac: ENC[AES256_GCM,data:riRcnRTDeQreoHfCWI8XxlGxb89zO8Aue7KROfGfvsm/DQCw75nBUDefEB+B8FBGasm8TIEzwXQyRVakVqgW8MWeNxcHLggPLpzmNYDafoWEAaaa228tnpN0yj3b+qp0z62994vKaohR/bK6IJCZihtPbCj3Kqwq86I3TT85xhM=,iv:glifXpWy3IoVMQRfgp5aWIEPnoZhL6ZW98AZXUDj8dA=,tag:RT+yTjrdJ4JGMVACO/o+6Q==,type:str]
     encrypted_regex: ^(data|stringData)$
     version: 3.10.2
