--- a/clusters/home/helm/twin/repository.yaml
+++ b/clusters/home/helm/twin/repository.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: minicloudlabs
+  name: twin
   namespace: flux-system
 spec:
   interval: 1m
-  url: https://minicloudlabs.github.io/helm-charts
+  url: https://twin.github.io/helm-charts
