--- a/clusters/home/helm/bitnami/repository.yaml
+++ b/clusters/home/helm/bitnami/repository.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30m
-  url: https://charts.bitnami.com/bitnami
+  url: oci://registry-1.docker.io/bitnamicharts/wordpress
