style: comment out unused resources in kustomization files

--- a/clusters/home/core/kustomization.yaml
+++ b/clusters/home/core/kustomization.yaml
@@ -4,7 +4,7 @@ resources:
   - ingress-nginx
   - longhorn
   - cloudflare
-  - mariadb
+  # - mariadb
   # - system-upgrade  # Enable for upgrades
   
   
