--- a/clusters/home/core/longhorn/service.yaml
+++ b/clusters/home/core/longhorn/service.yaml
@@ -23,13 +23,13 @@ metadata:
     kubernetes.io/ingress.class: "nginx"
     # FOR AUTH: https://longhorn.io/docs/1.4.2/deploy/accessing-the-ui/longhorn-ingress/
     # type of authentication
-    nginx.ingress.kubernetes.io/auth-type: basic
+    # nginx.ingress.kubernetes.io/auth-type: basic
     # prevent the controller from redirecting (308) to HTTPS
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     # name of the secret that contains the user/password definitions
-    nginx.ingress.kubernetes.io/auth-secret: basic-auth-longhorn
+    # nginx.ingress.kubernetes.io/auth-secret: basic-auth-longhorn
     # message to display with an appropriate context why the authentication is required
-    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required "
+    # nginx.ingress.kubernetes.io/auth-realm: "Authentication Required "
     # custom max body size for file uploading like backing image uploading
     nginx.ingress.kubernetes.io/proxy-body-size: 10000m
     gethomepage.dev/enabled: "true"
