style: Update PVC name in release.yaml

--- a/clusters/home/apps/vaultwarden/release.yaml
+++ b/clusters/home/apps/vaultwarden/release.yaml
@@ -30,7 +30,7 @@ spec:
     # Attachments are stored at /data/attachments on the same PVC
     storage:
       data:
-        name: vaultwarden
+        name: vaultwarden-pvc
         size: 5Gi
         class: longhorn
         keepPvc: true
